<resources>
    <string name="app_name">নামাজ শিক্ষা</string>
    <string name="namaj">নামাজ</string>
    <string name="iman">ঈমান</string>
    <string name="roja">রোজা</string>
    <string name="hazz">হজ্জ</string>
    <string name="jakat">যাকাত</string>
    <string name="others">অন্যন্য</string>
    <string name="APP_ID">ca-app-pub-7638115839816299~9390271954</string>
    <string name="BANNER_AD1">ca-app-pub-7638115839816299/7885618599</string>
    <string name="BANNER_AD2">ca-app-pub-7638115839816299/3618946819</string>
    <string name="INTERSTITIAL_ID">ca-app-pub-7638115839816299/2218644356</string>
    <string name="company_name">Genius Cryptical Software</string>
    <string name="company_email">geniuscrypticlasoft@gmail.com</string>
    <string name="about_company">Company: Genius Cryptical Software</string>
    <string name="teem_support">Team: Cryptical Software Team</string>
    <string name="current_version">Current Version: 1.0.0</string>
    <string name="about">About</string>
    <string name="more_apps">More Apps</string>
    <string name="rate">Rate Us</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="comment">Comment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="niyot">রোজার নিয়ত </string>
    <string name="niyot1">রোজার নিয়ত বাংলা </string>
    <string name="gorottoporno">গুরুত্বপূর্ন কিছু কথা</string>
    <string name="bistarito">আরও বিস্তারিত জানুন</string>
    <string name="kicho_kotha">রমজানের রোজা পালনের জন্য সেহরি করা আবশ্যক। হাদিসে পাকে প্রিয়নবী রাসূলুল্লাহ (সা.) সেহরি গ্রহণের তাগিদ দিয়েছেন। আবার যথাসময়ে ইফতার গ্রহণেরও তাগিদ প্রদান করেছেন।
রমজানের রোজা পালনের জন্য সেহরি করা আবশ্যক। হাদিসে পাকে প্রিয়নবী রাসূলুল্লাহ (সা.) সেহরি গ্রহণের তাগিদ দিয়েছেন। আবার যথাসময়ে ইফতার গ্রহণেরও তাগিদ প্রদান করেছেন।\n
প্রত্যেক মুসলিম, প্রাপ্তবয়স্ক, সুস্থ মস্তিষ্কসম্পন্ন, স্থায়ী ও শারীরিক-মানসিকভাবে সামর্থ্যবান নারী-পুরুষের ওপর রমজানের রোজা রাখা ফরজ।
রমজান মাসের রোজা পালন নির্দেশ দিয়ে মহান রাব্বুল আলামিন আল্লাহ তায়ালা কোরআনুল কারিমে বলেন,
        ‘হে ঈমানদারগণ! তোমাদের ওপর সিয়াম বা রোজা ফরজ করা হয়েছে; যেভাবে তোমাদের পূর্ববর্তীদের ওপর ফরজ করা হয়েছিল; যাতে তোমরা তাকওয়া (আত্মশুদ্ধি) অর্জনে করতে পার। (সূরা : বাকারা : আয়াত  : ১৮৩)।
রমজানের রোজা পালনের জন্য সেহরি করা আবশ্যক। হাদিসে পাকে প্রিয়নবী রাসূলুল্লাহ (সা.) সেহরি গ্রহণের তাগিদ দিয়েছেন। আবার যথাসময়ে ইফতার গ্রহণেরও তাগিদ প্রদান করেছেন।</string>
    <string name="orrtho">অর্থ : হে আল্লাহ! আমি আগামীকাল পবিত্র রমজানের তোমার পক্ষ থেকে নির্ধারিত ফরজ রোজা রাখার ইচ্ছা পোষণ (নিয়্যত) করলাম। অতএব,
        তুমি আমার পক্ষ থেকে (আমার রোজা তথা পানাহার থেকে বিরত থাকাকে) কবুল কর, নিশ্চয়ই তুমি সর্বশ্রোতা ও সর্বজ্ঞানী।</string>
    <string name="uccaron"> নাওয়াইতু আন আছুম্মা গাদাম মিন শাহরি রমাজানাল মুবারাকি ফারদাল্লাকা, ইয়া আল্লাহু ফাতাকাব্বাল মিন্নি ইন্নিকা আনতাস সামিউল আলিম।</string>
    <string name="niyot_arbi">
        نَوَيْتُ اَنْ اُصُوْمَ غَدًا مِّنْ شَهْرِ رَمْضَانَ الْمُبَارَكِ فَرْضَا لَكَ يَا اللهُ فَتَقَبَّل مِنِّى اِنَّكَ اَنْتَ السَّمِيْعُ الْعَلِيْم
    </string>
    <string name="ifter">ইফতারের দোয়া</string>
    <string name="jaynamaz_title">জায়নামাজের দোয়া</string>
    <string name="sana_title">সানা</string>
    <string name="tasahod_title">তাশাহুদ বা আত্তাহিয়্যাতু</string>
    <string name="dorodsharif_title">দরুদ শরীফ</string>
    <string name="duwamasora_title">দোয়ায়ে মাসূরা</string>
    <string name="duwakunot_title">দোয়ায়ে কুনুত</string>
    <string name="proyojoniyo_surah">প্রয়োজনীয় সূরা সমূহ</string>
    <string name="fatiha_title">সুরা ফাতিহা</string>
    <string name="ikhlas_title">সূরা ইখলাস</string>
    <string name="falakh_title">সূরা ফালাক</string>
    <string name="kawsar_title">সূরা কাওসার</string>
    <string name="kurais_title">সূরা কুরাইশ</string>
    <string name="nas_title">সূরা নাস</string>
    <string name="asor_title">সূরা আসর</string>
    <string name="lahab_title">সূরা লাহাব</string>
    <string name="kafirun_title">সুরা কাফিরুন</string>
    <string name="jaynamajer_dowa_banlga"> ইন্নি ওয়াজ্জাহ তু ওয়াজ্ হিয়া লিল্লাজি, ফাত্বরস্ সামা-ওয়া-তি  ওয়াল্ আরদ্বঅ হানি-ফাওঁ ওয়ামা-আনা মিনাল মুশরিকী-ন।</string>
    <string name="jaynamajer_dowa_arbi">اِنِّىْ وَجَّهْتُ وَجْهِىَ لِلَّذِىْ فَطَرَالسَّمَوَتِ وَاْلاَرْضَ حَنِيْفَاوَّمَااَنَا مِنَ الْمُشْرِكِيْنَ</string>
    <string name="sana_bangla"> সুবহা-না কাল্লা-হুম্মা ওয়া বিহাম্ দিকা ওয়াতাবারঅ কাস্ মুকা ওয়াতা’ আ-লা জাদ্দুকা ওয়া লা-ইলা-হা গাইরুক।</string>
    <string name="sana_arbi">سُبْحَانَكَ اللَّهُمَّ وَبِحَمْدِكَ وَتَبَارَكَ اسْمُكَ وَتَعَالَى جَدُّكَ وَلَا إِلَهَ غَيْرُكَ</string>
    <string name="tasahod_bangla"> আত্তাহিয়্যাতু লিল্লা-হি  ওয়াছ ছালা-ওয়াতু ওয়াত-তাইয়্যিবা তু আচ্ছালা মু আ লাইকা আইয়্যুহান নাবিয়্যু ওয়ারাহ মাতুল্লাহি ওয়া বারাকাতুহ আচ্ছালামু আলাইনা ওয়া আ লা ইবাদিল্লা হিছ-ছা লিহীন। আশহাদু আল লা-ইলা-হা ইল্লাল্লাহু ওয়া আশহাদু আন্না মুহাম্মাদান আবদুহু ওয়া রাসুলুহু ।</string>
    <string name="tasahod_arbi"> اَلتَّحِيَّاتُ لِلَّهِ وَالصَّلَوَاتُ وَالطَّيِّبَاتُ، السَّلَامُ عَلَيْكَ أَيُّهَا النَّبِيُّ وَرَحْمَةُ اللَّهِ وَبَرَكَاتُهُ، السَّلَامُ عَلَيْنَا وَعَلَى عِبَادِ اللَّهِ الصَّالِحِيْنَ، أَشْهَدُ أَن لَّاإِلَهَ إِلَّا اللَّهُ وَأَشْهَدُ أَنَّ مُحَمَّدًا عَبْدُهُ وَرَسُولُهُ</string>
    <string name="dorodsharif_bangla"> আল্লহুম্মা ছাল্লি আ লা মুহাম্মাদিওঁ ওয়া আ লা আ-লি মুহাম্মাদিন কামা ছাল্লাইতা আ লা ইব্রহীমা ওয়া আ লা আ-লি ইব্রহীমা ইন্নাকা হামীদুম মাজী-দ্ ।আল্লাহুম্মা বারিক্ আ লা মুহাম্মাদিওঁ ওয়া আ লা আ লি মুহাম্মাদিন,  কামা বা-রাকতা আ লা ইব্রহীমা ওয়া আ লা আ লি ইব্রহীমা ইন্নাকা হামিদুম মাজীদ ।</string>
    <string name="dorodsharif_arbi">اَللَّهُمَّ صَلِّ عَلَى مُحَمَّدٍ وَّعَلَى آلِ مُحَمَّدٍ كَمَا صَلَّيْتَ عَلَى إِبْرَاهِيْمَ وَعَلَى آلِ إِبْرَاهِيْمَ إِنَّكَ حَمِيْدٌ مَجِيْدٌ, وبَارِكْ عَلَى مُحَمَّدٍ وَعَلَى آلِ مُحَمَّدٍ كَمَا بَارَكْتَ عَلَى إِبْرَاهِيْمَ وَعَلَى آلِ إِبْرَاهِيمَ إِنَّكَ حَمِْيدٌ مَجِيْدٌ</string>
    <string name="duwamasora_bangla"> আল্লা-হুম্মা ইন্নী জ্বলামতু নাফসী জুলমান কাছীরও ওয়ালা ইয়াগফিরু যুনূবা ইল্লা আনতা ফাগ্ ফিরলী মাগফিরাতাম মিন ইনদিকা ওয়ার হামনী ইন্নাকা আনতাল গাফুরুর রাহীম।</string>
    <string name="duwamasora_arbi">اللَّهُمَّ اغْفِرْ لِىْ وَلِوَ الِدَىَّ وَلِمَنْ تَوَالَّدَ وَلِجَمِيْعِ الْمُؤْ مِنِيْنَ وَالْمُؤْ مِنَاتِ وَالْمُسْلِمِيْنَ وَالْمُسْلِمَاتِ وَالاْاَحْيَاءِ مِنْهُمْ وَالْاَمُوْ اَتْ بِرَحْمَتِكَ يَااَرْحَمَرَّحِمِيْنَ</string>
    <string name="duwa_kunut_bangla">আল্লাহুম্মা ইন্না নাসতা’ঈনুকা ওয়া নাসতাগ ফিরুকা, ওয়া নু’মিনু বিকা ওয়া না তা ওয়াক্কালু আলাইকা ওয়া নুছনি আলাইকাল খাইর। ওয়া নাশকুরুকা, ওয়ালা নাকফুরুকা, ওয়া নাখ লা, ওয়া নাত রুকু মাইয়্যাফ জুরুকা। আল্লাহুম্মা ইয়্যাকা না’বুদু ওয়ালাকা নুছাল্লি ওয়া নাসজুদু ওয়া ইলাইকা নাস’আ, ওয়া নাহফিদু ওয়া নারজু রাহমাতাকা ওয়া নাখ’শা আযাবাকা ইন্না আযা-বাকা বিল কুফফা-রি মুল হিক</string>
    <string name="duwa_kunut_arbi">اَللَّهُمَّ اِنَّ نَسْتَعِيْنُكَ وَنَسْتَغْفِرُكَ وَنُؤْمِنُ بِكَ وَنَتَوَكَّلُ عَلَيْكَ وَنُثْنِىْ عَلَيْكَ الْخَيْرَ وَنَشْكُرُكَ وَلاَ نَكْفُرُكَ وَنَخْلَعُ وَنَتْرُكُ مَنْ يَّفْجُرُكَ-اَللَّهُمَّ اِيَّاكَ نَعْبُدُ وَلَكَ نُصَلِّىْ وَنَسْجُدُ وَاِلَيْكَ نَسْعَى وَنَحْفِدُ وَنَرْجُوْ رَحْمَتَكَ وَنَخْشَى عَذَابَكَ اِنَّ عَذَابَكَ بِالْكُفَّارِ مُلْحِقٌ</string>
    <string name="al_fatiha_bangla">আল-হামদু লিল্লাহি রাব্বিল আলামিন।
        আর রাহমানির রাহিম।
        মালিকি ইয়াওমিদ্দিন।
        ই্‌য়াকানাবুদু ওয়া ইয়্যাকা নাসতাইন।
        ইহ দিনাস সিরাতাল মুস্তাকীম।
        সিরাতাল লাযিনা আনআমতা আলাইহিম।
        গাইরিল মাগদুবি আলাইহিম ওয়ালাদ দুয়ালিন।</string>
    <string name="al_fatiha_arbi">
        بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِیْمِ
        \nاَلْحَمْدُ لِلّٰهِ رَبِّ الْعٰلَمِیْنَۙ
        \nالرَّحْمٰنِ الرَّحِیْمِۙ
        \nمٰلِكِ یَوْمِ الدِّیْنِؕ
        \nاِیَّاكَ نَعْبُدُ وَ اِیَّاكَ نَسْتَعِیْنُؕ
        \nاِهْدِنَا الصِّرَاطَ الْمُسْتَقِیْمَۙ
        صِرَاطَ الَّذِیْنَ اَنْعَمْتَ عَلَیْهِمْ ﴰ غَیْرِ الْمَغْضُوْبِ عَلَیْهِمْ وَ لَا الضَّآلِّیْنَ۠</string>
    <string name="al_ikhlas_bangla">ক্বুলহু আল্লাহু আহাদ। আল্লাহুস সামাদ। লাম ইয়ালিদ ওয়া লাম ইউলাদ। ওয়া লাম ইয়া কুল্লাহু কুফুওয়ান আহাদ।</string>
    <string name="al_ikhlas_arbi">
        بِسْمِ اللَّهِ الرَّحْمَٰنِ الرَّحِيمِ\n
        قُلْ هُوَ اللَّهُ أَحَدٌ\n
        اللَّهُ الصَّمَدُ\n
        لَمْ يَلِدْ وَلَمْ يُولَدْ\n
        وَلَمْ يَكُنْ لَهُ كُفُوًا أَحَد</string>
    <string name="al_falakh_bangla">ক্বুল আউযু বিরাব্বিল ফালাক। মিন শাররি মাখালাক্ব। ওয়া মিন শাররি গাসিক্বিন ইযা অক্বাব। ওয়া মিন শাররিন নাফ্‌ফাসাতি ফিল্‌ উকাদ। ওয়া মিন শাররি হাসিদিন ইযা হাসাদ।</string>
    <string name="al_falakh_arbi">
        بِسْمِ اللَّهِ الرَّحْمَٰنِ الرَّحِيمِ\n
        قُلْ أَعُوذُ بِرَبِّ الْفَلَقِ\n
        مِنْ شَرِّ مَا خَلَقَ\n
        وَمِنْ شَرِّ غَاسِقٍ إِذَا وَقَبَ\n
        وَمِنْ شَرِّ النَّفَّاثَاتِ فِي الْعُقَدِ\n
        وَمِنْ شَرِّ حَاسِدٍ إِذَا حَسَدَ</string>
    <string name="al_kawsar_bangla">ইন্না আতাইনা কাল কাওসার। ফাসাল্লি লিরাব্বিকা ওয়ান হার। ইন্না শানিয়াকা হুয়াল আবতার।</string>
    <string name="al_kawsar_arbi">
        بِسْمِ اللَّهِ الرَّحْمَٰنِ الرَّحِيمِ\n
        إِنَّا أَعْطَيْنَاكَ الْكَوْثَرَ\n
        فَصَلِّ لِرَبِّكَ وَانْحَرْ\n
        إِنَّ شَانِئَكَ هُوَ الْأَبْتَرُ</string>
    <string name="al_kurais_bangla">লি-ঈলাফি কুরাইশিন। ঈলাফিহিম রিহলাতাশ শিতায়ি ওয়াস সাইফ। ফাল ইয়াবুদু রাব্বা হাযাল বাইত। আল্লাযি আত আমাহুম মিন জুয়েঁউ ওয়া আমানাহুম মিন খাউফ।</string>
    <string name="al_kurais_arbi">
        بِسْمِ اللَّهِ الرَّحْمَٰنِ الرَّحِيمِ\n
        لِإِيلَافِ قُرَيْشٍ\n
        إِيلَافِهِمْ رِحْلَةَ الشِّتَاءِ وَالصَّيْفِ\n
        فَلْيَعْبُدُوا رَبَّ هَٰذَا الْبَيْتِ\n
        الَّذِي أَطْعَمَهُمْ مِنْ جُوعٍ وَآمَنَهُمْ مِنْ خَوْفٍ</string>
    <string name="al_nas_bangla">ক্বুল আউযু বিরাব্বিন নাস। মালিকিন্নাস। ইলাহিন্নাস। মিন শাররীল ওয়াস ওয়াসিল খান্নাস। আল্লাযি ইউওয়াস ভিসু ফী সুদুরিন্নাস। মিনাল জিন্নাতি ওয়ান নাস।</string>
    <string name="al_nas_arbi">
        بِسْمِ اللَّهِ الرَّحْمَٰنِ الرَّحِيمِ\n
        قُلْ أَعُوذُ بِرَبِّ النَّاسِ\n
        مَلِكِ النَّاسِ\n
        إِلَٰهِ النَّاسِ\n
        مِنْ شَرِّ الْوَسْوَاسِ الْخَنَّاسِ\n
        الَّذِي يُوَسْوِسُ فِي صُدُورِ النَّاسِ\n
        مِنَ الْجِنَّةِ وَالنَّاسِ</string>
    <string name="al_asor_bangla">ওয়াল আসরি। আন্নাল ইনসানা লাফী খুস্‌রিন। ইল্লাল্লাযীনা আমানু ওয়া আমিলুস সালিহাতি। তাও অসাও বিল হাক্কি। ওয়া তাওয়াসাও বিল সাবর।</string>
    <string name="al_asor_arbi">
        بِسْمِ اللَّهِ الرَّحْمَٰنِ الرَّحِيمِ\n
        وَالْعَصْرِ\n
        إِنَّ الْإِنْسَانَ لَفِي خُسْرٍ\n
        إِلَّا الَّذِينَ آمَنُوا وَعَمِلُوا الصَّالِحَاتِ وَتَوَاصَوْا بِالْحَقِّ وَتَوَاصَوْا بِالصَّبْرِ</string>
    <string name="al_lahab_bangla">তাব্বাৎ ইয়াদা আবি লাহাবেউ ওয়াতাব্বা মা আগনা আনহু মালুহু ওয়ামা কাছাব। ছাইয়াছলা নারান জাতা লাহাবিউ ওয়ামরা আতুহু হাম্মালাতাল হাতাব। ফী জীদিহা হাবলুম মিম মাছাদ।</string>
    <string name="al_lahab_arbi">
        بِسْمِ اللَّهِ الرَّحْمَٰنِ الرَّحِيمِ\n
        تَبَّتْ يَدَا أَبِي لَهَبٍ وَتَبَّ\n
        مَا أَغْنَىٰ عَنْهُ مَالُهُ وَمَا كَسَبَ\n
        سَيَصْلَىٰ نَارًا ذَاتَ لَهَبٍ\n
        وَامْرَأَتُهُ حَمَّالَةَ الْحَطَبِ\n
        فِي جِيدِهَا حَبْلٌ مِنْ مَسَدٍ</string>
    <string name="al_kafirun_bangla">কুল ইয়া আইউহাল কাফিরূন। লা আ’বুদু মাতাবুদুন। ওয়ালা আনতুম আবিদুনা মা আবুদ। ওয়া লা আনা আবিদুনা মা আবাদতুম। ওয়ালা আনতুম আবিদুনা মাআবুদ। লাকুম দীনুকুম ওয়ালীয়া দ্বীন।</string>
    <string name="al_kafirun_arbi">
        بِسْمِ اللَّهِ الرَّحْمَٰنِ الرَّحِيمِ\n
        قُلْ يَا أَيُّهَا الْكَافِرُونَ\n
        لَا أَعْبُدُ مَا تَعْبُدُونَ\n
        وَلَا أَنْتُمْ عَابِدُونَ مَا أَعْبُدُ\n
        وَلَا أَنَا عَابِدٌ مَا عَبَدْتُمْ\n
        وَلَا أَنْتُمْ عَابِدُونَ مَا أَعْبُدُ\n
        لَكُمْ دِينُكُمْ وَلِيَ دِينِ</string>
    <string name="gosol">গোসল</string>
    <string name="oju_titile">অজু</string>
    <string name="tayammum">তায়াম্মুম</string>
</resources>