<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appColor"
    tools:context=".Activity.ActivityOthers"
    android:orientation="vertical"
    android:weightSum="10"
    android:paddingStart="10sp"
    android:paddingEnd="10sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight=".7"
        android:gravity="center">

        <com.google.android.gms.ads.AdView
            android:id="@+id/activity_others_ad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            ads:adSize="BANNER"
            ads:adUnitId="@string/BANNER_AD1">

        </com.google.android.gms.ads.AdView>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="8.6">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/gosol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gosol"
                android:background="@drawable/button_round"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/oju"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/oju_titile"
                android:layout_marginTop="10sp"
                android:background="@drawable/button_round"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/tayammum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_round"
                android:textColor="@color/white"
                android:layout_marginTop="10sp"
                android:text="@string/tayammum"/>

            <Button
                android:id="@+id/surah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_round"
                android:textColor="@color/white"
                android:layout_marginTop="10sp"
                android:text="@string/proyojoniyo_surah"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/jaynamaz_title"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_marginTop="10sp"
                android:textStyle="bold"
                android:gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/jaynamajer_dowa_arbi"
                android:gravity="center"
                android:textSize="14sp"
                android:textStyle="italic"
                android:layout_marginTop="10sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/jaynamajer_dowa_banlga"
                android:textSize="12sp"
                android:textStyle="italic"
                android:layout_marginTop="10sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/sana_title"
                android:layout_marginTop="10sp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/sana_arbi"
                android:textSize="14sp"
                android:gravity="center"
                android:textStyle="italic"
                android:layout_marginTop="10sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/sana_bangla"
                android:textSize="12sp"
                android:textStyle="italic"
                android:layout_marginTop="10sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/tasahod_title"
                android:layout_marginTop="10sp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/tasahod_arbi"
                android:gravity="center"
                android:textSize="14sp"
                android:textStyle="italic"
                android:layout_marginTop="10sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/tasahod_bangla"
                android:textSize="12sp"
                android:textStyle="italic"
                android:layout_marginTop="10sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/dorodsharif_title"
                android:layout_marginTop="10sp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/dorodsharif_arbi"
                android:gravity="center"
                android:textSize="14sp"
                android:textStyle="italic"
                android:layout_marginTop="10sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/dorodsharif_bangla"
                android:textSize="12sp"
                android:textStyle="italic"
                android:layout_marginTop="10sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/duwamasora_title"
                android:layout_marginTop="10sp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/duwamasora_arbi"
                android:gravity="center"
                android:textSize="14sp"
                android:textStyle="italic"
                android:layout_marginTop="10sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/duwamasora_bangla"
                android:textSize="12sp"
                android:textStyle="italic"
                android:layout_marginTop="10sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/duwakunot_title"
                android:layout_marginTop="10sp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/duwa_kunut_arbi"
                android:gravity="center"
                android:textSize="14sp"
                android:textStyle="italic"
                android:layout_marginTop="10sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/duwa_kunut_bangla"
                android:textSize="12sp"
                android:textStyle="italic"
                android:layout_marginTop="10sp"/>
        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight=".7"
        android:gravity="center">

        <com.google.android.gms.ads.AdView
            android:id="@+id/activity_others_ad_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            ads:adSize="BANNER"
            ads:adUnitId="@string/BANNER_AD2">

        </com.google.android.gms.ads.AdView>

    </LinearLayout>

</LinearLayout>